--- a/Lesson5/HomeTask5/HomeTask5.csproj
+++ b/Lesson5/HomeTask5/HomeTask5.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EBB26802-BFD4-495A-AE37-0994D181CA6D}</ProjectGuid>
+    <ProjectGuid>{26A95959-3490-4287-9E04-EAB097435A81}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Lesson5</RootNamespace>
-    <AssemblyName>Lesson5</AssemblyName>
+    <RootNamespace>HomeTask5</RootNamespace>
+    <AssemblyName>HomeTask5</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,9 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Client.cs" />
-    <Compile Include="IPClient.cs" />
-    <Compile Include="OOOClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
