--- a/Lesson5/HomeTask5/HomeTask5.csproj
+++ b/Lesson5/HomeTask5/HomeTask5.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs" />
+    <Compile Include="AccumulationAccount.cs" />
+    <Compile Include="CheckingAccount.cs" />
+    <Compile Include="MetalAccount.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SavingAccount.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
